[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eka-usage-sdk"
version = "0.1.0"
description = "Eka Care Usage & Critical Log SDK (Python)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Eka Care", email = "engineering@eka.care" }]
dependencies = [
    "confluent-kafka>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["eka_usage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
